# RAPIO

./: .gitignore  CMakeLists.txt  GITNOTES.TXT  Makefile.am  README.md  autogen.sh  checkformat.sh  configure.ac  formatcode.sh  makeindex.py  rapio.dox  repo.sh  semgrep.sh  uncrustify.cfg
PYTHON/: Makefile.am  README.TXT  example.py  rPython.cc  terrainChart.py  write.py
PYTHON/RAPIOPY/: RAPIO.py  __init__.py
base/: CMakeLists.txt  Makefile.am  RAPIO.h  RAPIO.h.in  README.md  ccronexpr.h  config.h  config.h.in  configure.ac  rAWS.cc  rAWS.h  rAlgConfigFile.cc  rAlgConfigFile.h  rAlgorithm.h  rArith.h  rArray.cc  rArray.h  rArrayAlgorithm.cc  rArrayAlgorithm.h  rAttributeDataType.cc  rAttributeDataType.h  rBOOST.h  rBimap.cc  rBimap.h  rBinaryIO.cc  rBinaryIO.h  rBinaryTable.cc  rBinaryTable.h  rBitset.cc  rBitset.h  rBoostConnection.cc  rBoostConnection.h  rBuffer.h  rByteOrder.h  rColor.cc  rColor.h  rColorMap.cc  rColorMap.h  rColorTerm.cc  rColorTerm.h  (+236 more)
base/config/: library_sci_palette.h  rConfig.cc  rConfig.h  rConfigColorMap.cc  rConfigColorMap.h  rConfigDirectoryMapping.cc  rConfigIODataType.cc  rConfigLogging.cc  rConfigLogging.h  rConfigParamGroup.cc  rConfigParamGroup.h  rConfigRadarInfo.cc  rConfigRadarInfo.h  rConfigRecord.cc  rConfigRecord.h
base/datatype/: rAttributeDataType.h  rBinaryTable.cc  rBinaryTable.h  rDataGrid.cc  rDataGrid.h  rDataTable.cc  rDataType.cc  rDataType.h  rFusionBinaryTable.cc  rFusionBinaryTable.h  rGDALDataType.h  rGribDataType.cc  rGribDataType.h  rImageDataType.h  rLLHGridN2D.cc  rLatLonArea.cc  rLatLonArea.h  rLatLonGrid.cc  rLatLonGrid.h  rLatLonGridIterator.cc  rLatLonGridIterator.h  rLatLonGridProjection.cc  rLatLonGridProjection.h  rLatLonHeightGrid.cc  rLatLonHeightGrid.h  rLatLonHeightGridIterator.cc  rLatLonHeightGridIterator.h  rLatLonHeightGridProjection.cc  rLatLonHeightGridProjection.h  rMergerBinaryTable.cc  rMergerBinaryTable.h  rMultiDataType.cc  rMultiDataType.h  rPTreeData.cc  rPTreeData.h  rRadialSet.cc  rRadialSet.h  rRadialSetIterator.cc  rRadialSetIterator.h  rRadialSetProjection.cc  (+2 more)
base/image/: rArrayFilter.h  rArraySampler.cc  rArraySampler.h  rBilinear.cc  rBilinear.h  rCressman.cc  rCressman.h  rNearestNeighbor.cc  rNearestNeighbor.h  rPercentFilter.cc  rPercentFilter.h  rThresholdFilter.cc  rThresholdFilter.h
base/index/: rFMLIndex.cc  rFakeIndex.cc  rFakeIndex.h  rFileIndex.cc  rIOIndex.cc  rIOIndex.h  rIndexType.cc  rRedisIndex.cc  rRedisIndex.h  rStreamIndex.cc  rStreamIndex.h  rWebIndex.cc  rWebIndex.h  rXMLIndex.cc
base/iogdal/: CMakeLists.txt  Makefile.am  README.TXT  configure.ac  rGDALDataTypeImp.cc  rGDALDataTypeImp.h  rIOGDAL.cc  rIOGDAL.h
base/iogrib/: CMakeLists.txt  Makefile.am  README.TXT  configure.ac  rGribAction.cc  rGribAction.h  rGribDataTypeImp.cc  rGribDataTypeImp.h  rGribDatabase.cc  rGribFieldImp.cc  rGribMessageImp.cc  rGribMessageImp.h  rIOGrib.cc  rIOGrib.h
base/iohmrg/: CMakeLists.txt  README.TXT  rHmrgLatLonGrids.cc  rHmrgLatLonGrids.h  rHmrgProductInfo.cc  rHmrgProductInfo.h  rHmrgRadialSet.cc  rHmrgRadialSet.h  rIOHmrg.cc  rIOHmrg.h
base/ioimage/: CMakeLists.txt  Makefile.am  configure.ac  rIOImage.cc  rIOImage.h
base/ionetcdf/: CMakeLists.txt  Makefile.am  README.TXT  configure.ac  rIONetcdf.cc  rIONetcdf.h  rNetcdfBinaryTable.cc  rNetcdfBinaryTable.h  rNetcdfDataGrid.cc  rNetcdfDataGrid.h  rNetcdfDataTypeImp.cc  rNetcdfDataTypeImp.h  rNetcdfLatLonGrid.cc  rNetcdfLatLonGrid.h  rNetcdfLatLonHeightGrid.cc  rNetcdfRadialSet.cc  rNetcdfRadialSet.h
base/iopython/: CMakeLists.txt  Makefile.am  configure.ac  rIOPython.cc  rIOPython.h
base/ioraw/: CMakeLists.txt  rIORaw.cc  rIORaw.h
base/iotext/: CMakeLists.txt  README.TXT  rIOText.cc  rIOText.h  rTextBinaryTable.cc  rTextDataGrid.cc  rTextDataGrid.h
base/m4/: rapiobase.m4
base/notifier/: rEXERecordNotifier.cc  rEXERecordNotifier.h  rFMLRecordNotifier.cc  rFMLRecordNotifier.h  rRecordNotifier.cc  rRecordNotifier.h  rRedisRecordNotifier.cc  rRedisRecordNotifier.h
base/plugin/: rPluginHeartbeat.cc  rPluginHeartbeat.h  rPluginIngestor.cc  rPluginIngestor.h  rPluginNotifier.cc  rPluginNotifier.h  rPluginPartition.cc  rPluginPartition.h  rPluginProductOutput.cc  rPluginProductOutput.h  rPluginProductOutputFilter.cc  rPluginProductOutputFilter.h  rPluginRealTime.cc  rPluginRealTime.h  rPluginRecordFilter.cc  rPluginRecordFilter.h  rPluginTerrainBlockage.cc  rPluginTerrainBlockage.h  rPluginVolume.cc  rPluginVolume.h  rPluginVolumeValueResolver.cc  rPluginVolumeValueResolver.h  rPluginWebserver.cc  rPluginWebserver.h  rRAPIOPlugin.cc  rRAPIOPlugin.h
base/watcher/: rDirWatcher.cc  rEXEWatcher.cc  rEXEWatcher.h  rFAMWatcher.cc  rFAMWatcher.h  rIOWatcher.cc  rIOWatcher.h  rRedisWatcher.cc  rRedisWatcher.h  rWebIndexWatcher.cc  rWebIndexWatcher.h
modules/iogdal/: CMakeLists.txt  README.TXT  rGDALDataTypeImp.cc  rGDALDataTypeImp.h  rGDALLatLonGrids.cc  rGDALLatLonGrids.h  rGDALSharedContext.h  rGDALVectorLayerImp.cc  (+3 more)
programs/: CMakeLists.txt  README.TXT  rCopy.cc  rCopy.h  rDump.cc  rDump.h  rGrib2Reader.cc  rGrib2Reader.h  rWatch.cc  rWatch.h
rexample/: CMakeLists.txt  Makefile.am  rGribExample.cc  rGribExample.h  rSimpleAlg.cc  rSimpleAlg.h  rSimpleProgram.cc  rSimpleProgram.h  rTile.cc  rTile.h  rsimplealg.cc
tests/: CMakeLists.txt  Makefile.am  README.TXT  README.md  configure.ac  rBOOSTTest.h  rTestArray.cc  rTestBimap.cc  rTestBinaryIO.cc  rTestBitset.cc  rTestColorMap.cc  rTestFactory.cc  rTestGrid.cc  rTestIODataType.cc  rTestIOPostProcessor.cc  rTestMain.cc  rTestNetcdf.cc  rTestNetcdf.h  rTestNetwork.cc  rTestOptions.cc  rTestSparseVector.cc  rTestStage2Data.cc  rTestTileJoin.cc  rTestTime.cc  rTestURL.cc  rTestValueCompressor.cc  runnetcdftest.sh  runtests.sh  runwebtest.sh  testjson.json  testxml.xml
webexample/: CMakeLists.txt  gl-script.js  index.html  leafletTMS.html  leafletWMS.html  main.cpp  module.js  openlayersTMS.html  rColorMap.js  runcolormap.sh  runconus.sh  runconusdebug.sh  runktlx.sh  runlegend.sh  runpolarhmrg.sh  styles.css  template.html  test1image.sh
webserver/: Makefile.am
(+307 files in other folders)
